Fix datapreview spacing with it's description

--- a/shared/scss/components/ckan/datapreview.scss
+++ b/shared/scss/components/ckan/datapreview.scss
@@ -1,4 +1,10 @@
 .ckanext-datapreview {
+  margin-bottom: 80px;
+
+  @media(min-width: $width-xs) {
+    margin-bottom: 0;
+  }
+
   .data-view-container {
     overflow: hidden;
     max-height:670px;
